--- a/image_recognition_tools/package.xml
+++ b/image_recognition_tools/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package format="2">
+<package>
   <name>image_recognition_tools</name>
   <version>0.0.1</version>
   <description>The image_recognition_tools package</description>
@@ -15,5 +15,5 @@
   <run_depend>python-matplotlib</run_depend>
   <run_depend>python-scipy</run_depend>
   <run_depend>python-sklearn</run_depend>
-  
+
 </package>
