--- a/image_recognition_tools/package.xml
+++ b/image_recognition_tools/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>image_recognition_tools</name>
   <version>0.0.1</version>
   <description>The image_recognition_tools package</description>
@@ -11,10 +11,11 @@
   <url type="website">https://github.com/tue-robotics/image_recognition/tree/master/image_recognition_tools</url>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>rospy</build_depend>
 
-  <run_depend>python-matplotlib</run_depend>
-  <run_depend>python-scipy</run_depend>
-  <run_depend>python-sklearn</run_depend>
+  <exec_depend>rospy</exec_depend>
+  <exec_depend>python-numpy</exec_depend>
+  <exec_depend>python-matplotlib</exec_depend>
+  <exec_depend>python-scipy</exec_depend>
+  <exec_depend>python-sklearn</exec_depend>
 
 </package>
