Cleanup in deps and package

--- a/image_recognition_tools/package.xml
+++ b/image_recognition_tools/package.xml
@@ -12,9 +12,9 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <exec_depend>rospy</exec_depend>
-  <exec_depend>python-numpy</exec_depend>
+  <exec_depend>image_recognition_util</exec_depend>
   <exec_depend>python-matplotlib</exec_depend>
+  <exec_depend>python-numpy</exec_depend>
   <exec_depend>python-scipy</exec_depend>
   <exec_depend>python-sklearn</exec_depend>
 
