--- a/image_recognition_util/CMakeLists.txt
+++ b/image_recognition_util/CMakeLists.txt
@@ -6,3 +6,8 @@ find_package(catkin REQUIRED COMPONENTS)
 catkin_python_setup()
 
 catkin_package()
+
+if (CATKIN_ENABLE_TESTING)
+    find_package(rostest REQUIRED)
+    add_rostest(test/test_all.test)
+endif()
