--- a/image_recognition_util/package.xml
+++ b/image_recognition_util/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>image_recognition_util</name>
   <version>0.0.4</version>
   <description>The image_recognition_util package</description>
@@ -9,5 +9,10 @@
   <license>TODO</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+
+  <exec_depend>python-numpy</exec_depend>
+  <exec_depend>python-opencv</exec_depend>
+
+  <test_depend>rostest</test_depend>
 
 </package>
