Start using diagnostic_updater::Heartbeat
Introduced in 0c41ad75a169864cf24eb522c08136be99122019 of https://github.com/tue-robotics/diagnostics

--- a/openface_ros/package.xml
+++ b/openface_ros/package.xml
@@ -19,5 +19,6 @@
   <run_depend>image_recognition_util</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>python-numpy</run_depend>
+  <run_depend>diagnostic_updater</run_depend>
 
 </package>
