Use diagnostic_updater.Heartbeat in openface node

--- a/openpose_ros/package.xml
+++ b/openpose_ros/package.xml
@@ -15,5 +15,6 @@
   <depend>image_recognition_msgs</depend>
 
   <depend>libopencv-dev</depend>
+  <depend>diagnostic_updater</depend>
 
 </package>
