--- a/skybiometry_ros/package.xml
+++ b/skybiometry_ros/package.xml
@@ -46,6 +46,7 @@
   <run_depend>cv_bridge</run_depend>
   <run_depend>image_recognition_msgs</run_depend>
   <run_depend>rospy</run_depend>
+  <run_depend>diagnostic_updater</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
