--- a/image_recognition/package.xml
+++ b/image_recognition/package.xml
@@ -12,6 +12,7 @@
   <run_depend>image_recognition_msgs</run_depend>
 
   <run_depend>tensorflow_ros</run_depend>
+  <run_depend>keras_ros</run_depend>
   <run_depend>openface_ros</run_depend>
   <run_depend>skybiometry_ros</run_depend>
   <run_depend>openpose_ros</run_depend>
