--- a/keras_ros/package.xml
+++ b/keras_ros/package.xml
@@ -18,4 +18,5 @@
   <run_depend>python-keras-pip</run_depend>
   <run_depend>python-numpy</run_depend>
   <run_depend>python-opencv</run_depend>
+  <run_depend>python-tensorflow-pip</run_depend>
 </package>
