--- a/keras_ros/package.xml
+++ b/keras_ros/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>keras_ros</name>
   <version>0.0.1</version>
   <description>The keras_ros package</description>
@@ -9,14 +9,13 @@
   <license>TODO</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>rospy</build_depend>
-  <build_depend>image_recognition_msgs</build_depend>
-  <build_depend>image_recognition_util</build_depend>
 
-  <run_depend>rospy</run_depend>
-  <run_depend>image_recognition_msgs</run_depend>
-  <run_depend>python-keras-pip</run_depend>
-  <run_depend>python-numpy</run_depend>
-  <run_depend>python-opencv</run_depend>
-  <run_depend>python-tensorflow-pip</run_depend>
+  <exec_depend>diagnostic_updater</exec_depend>
+  <exec_depend>rospy</exec_depend>
+  <exec_depend>image_recognition_msgs</exec_depend>
+  <exec_depend>image_recognition_util</exec_depend>
+  <exec_depend>python-keras-pip</exec_depend>
+  <exec_depend>python-numpy</exec_depend>
+  <exec_depend>python-opencv</exec_depend>
+  <exec_depend>python-tensorflow-pip</exec_depend>
 </package>
