--- a/keras_ros/CMakeLists.txt
+++ b/keras_ros/CMakeLists.txt
@@ -1,11 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(keras_ros)
 
-find_package(catkin REQUIRED COMPONENTS
-  rospy
-  image_recognition_msgs
-  image_recognition_util
-)
+find_package(catkin REQUIRED)
 
 catkin_python_setup()
 
