--- a/image_recognition_keras/package.xml
+++ b/image_recognition_keras/package.xml
@@ -6,16 +6,16 @@
 
   <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>
 
-  <license>TODO</license>
+  <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
   <exec_depend>diagnostic_updater</exec_depend>
-  <exec_depend>rospy</exec_depend>
   <exec_depend>image_recognition_msgs</exec_depend>
   <exec_depend>image_recognition_util</exec_depend>
   <exec_depend>python-keras-pip</exec_depend>
   <exec_depend>python-numpy</exec_depend>
   <exec_depend>python-opencv</exec_depend>
   <exec_depend>python-tensorflow-pip</exec_depend>
+  <exec_depend>rospy</exec_depend>
 </package>
