--- a/image_recognition_msgs/package.xml
+++ b/image_recognition_msgs/package.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>image_recognition_msgs</name>
   <version>0.0.4</version>
   <description>The image_recognition_msgs package</description>
 
   <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>
 
-  <license>TODO</license>
+  <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>message_generation</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>message_generation</run_depend>
-
+  <depend>sensor_msgs</depend>
+  <exec_depend>message_runtime</exec_depend>
 </package>
