--- a/image_recognition_openpose/package.xml
+++ b/image_recognition_openpose/package.xml
@@ -6,15 +6,13 @@
 
   <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>
 
-  <license>TODO</license>
+  <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <depend>roscpp</depend>
   <depend>cv_bridge</depend>
-  <depend>image_recognition_msgs</depend>
-
-  <depend>libopencv-dev</depend>
   <depend>diagnostic_updater</depend>
-
+  <depend>image_recognition_msgs</depend>
+  <depend>libopencv-dev</depend>
+  <depend>roscpp</depend>
 </package>
