--- a/image_recognition_rqt/package.xml
+++ b/image_recognition_rqt/package.xml
@@ -1,26 +1,20 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>image_recognition_rqt</name>
   <version>0.0.4</version>
   <description>The image_recognition_rqt package</description>
 
   <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>
 
-  <license>TODO</license>
+  <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>rospy</build_depend>
-  <build_depend>rqt_gui</build_depend>
-  <build_depend>rqt_gui_py</build_depend>
-  <build_depend>image_recognition_msgs</build_depend>
-  <build_depend>image_recognition_util</build_depend>
-
-  <run_depend>rospy</run_depend>
-  <run_depend>rqt_gui</run_depend>
-  <run_depend>rqt_gui_py</run_depend>
-  <run_depend>image_recognition_msgs</run_depend>
-  <run_depend>image_recognition_util</run_depend>
+  <exec_depend>image_recognition_msgs</exec_depend>
+  <exec_depend>image_recognition_util</exec_depend>
+  <exec_depend>rospy</exec_depend>
+  <exec_depend>rqt_gui</exec_depend>
+  <exec_depend>rqt_gui_py</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
