--- a/image_recognition_util/package.xml
+++ b/image_recognition_util/package.xml
@@ -6,7 +6,7 @@
 
   <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>
 
-  <license>TODO</license>
+  <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
