fix: exec_depend

--- a/image_recognition/package.xml
+++ b/image_recognition/package.xml
@@ -9,16 +9,16 @@
   <license>MIT</license>
   <buildtool_depend>catkin</buildtool_depend>
 
-  <run_depend>image_recognition_analysis</run_depend>
-  <run_depend>image_recognition_keras</run_depend>
-  <run_depend>image_recognition_msgs</run_depend>
-  <run_depend>image_recognition_openface</run_depend>
-  <run_depend>image_recognition_openpose</run_depend>
-  <run_depend>image_recognition_rqt</run_depend>
-  <run_depend>image_recognition_skybiometry</run_depend>
-  <run_depend>image_recognition_tensorflow</run_depend>
-  <run_depend>image_recognition_tensorflow_rqt</run_depend>
-  <run_depend>image_recognition_util</run_depend>
+  <exec_depend>image_recognition_analysis</exec_depend>
+  <exec_depend>image_recognition_keras</exec_depend>
+  <exec_depend>image_recognition_msgs</exec_depend>
+  <exec_depend>image_recognition_openface</exec_depend>
+  <exec_depend>image_recognition_openpose</exec_depend>
+  <exec_depend>image_recognition_rqt</exec_depend>
+  <exec_depend>image_recognition_skybiometry</exec_depend>
+  <exec_depend>image_recognition_tensorflow</exec_depend>
+  <exec_depend>image_recognition_tensorflow_rqt</exec_depend>
+  <exec_depend>image_recognition_util</exec_depend>
 
   <export>
     <metapackage/>
