--- a/image_recognition_msgs/CMakeLists.txt
+++ b/image_recognition_msgs/CMakeLists.txt
@@ -32,5 +32,5 @@ generate_messages(
 )
 
 catkin_package(
-  CATKIN_DEPENDS message_generation sensor_msgs
+  CATKIN_DEPENDS message_runtime sensor_msgs
 )
