--- a/image_recognition_openface/CMakeLists.txt
+++ b/image_recognition_openface/CMakeLists.txt
@@ -1,12 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(image_recognition_openface)
 
-find_package(catkin REQUIRED COMPONENTS
-  cv_bridge
-  image_recognition_msgs
-  image_recognition_util
-  rospy
-)
+find_package(catkin REQUIRED COMPONENTS)
 
 catkin_python_setup()
 
@@ -15,5 +10,6 @@ catkin_package()
 install(PROGRAMS
   scripts/face_recognition_node
   scripts/get_face_recognition
+  scripts/train_from_images
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
