--- a/image_recognition_tensorflow/CMakeLists.txt
+++ b/image_recognition_tensorflow/CMakeLists.txt
@@ -1,18 +1,16 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(image_recognition_tensorflow)
 
-find_package(catkin REQUIRED COMPONENTS
-  rospy
-  image_recognition_msgs
-  image_recognition_util
-)
+find_package(catkin REQUIRED)
 
 catkin_python_setup()
 
 catkin_package()
 
 install(PROGRAMS
-  scripts/retrain
+  scripts/evaluate_classifier
+  scripts/get_object_recognition
   scripts/object_recognition_node
+  scripts/retrain
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
