--- a/image_recognition_tensorflow_rqt/CMakeLists.txt
+++ b/image_recognition_tensorflow_rqt/CMakeLists.txt
@@ -1,14 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(image_recognition_tensorflow_rqt)
 
-## Find catkin macros and libraries
-## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
-## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS
-  rqt_gui
-  rqt_gui_py
-  image_recognition_tensorflow
-)
+find_package(catkin REQUIRED)
 
 catkin_python_setup()
 
