--- a/image_recognition_util/CMakeLists.txt
+++ b/image_recognition_util/CMakeLists.txt
@@ -11,3 +11,9 @@ if (CATKIN_ENABLE_TESTING)
     find_package(rostest REQUIRED)
     add_rostest(test/test_all.test)
 endif()
+
+install(PROGRAMS
+  scripts/publish_image_with_recognitions_overlay
+
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
