--- a/image_recognition_openpose/package.xml
+++ b/image_recognition_openpose/package.xml
@@ -15,4 +15,5 @@
   <depend>image_recognition_msgs</depend>
   <depend>libopencv-dev</depend>
   <depend>roscpp</depend>
+  <depend>sensor_msgs</depend>
 </package>
