--- a/image_recognition_jetson/CMakeLists.txt
+++ b/image_recognition_jetson/CMakeLists.txt
@@ -42,6 +42,13 @@ add_dependencies(detect_net ${catkin_EXPORTED_TARGETS})
 add_executable(detect_net_ros src/detect_net_ros.cpp)
 target_link_libraries(detect_net_ros detect_net)
 
+# Test catkin lint
+find_program(CATKIN_LINT catkin_lint REQUIRED)
+execute_process(COMMAND "${CATKIN_LINT}" "-q" "-W2" "${CMAKE_SOURCE_DIR}" RESULT_VARIABLE lint_result)
+if(NOT ${lint_result} EQUAL 0)
+  message(FATAL_ERROR "catkin_lint failed")
+endif()
+
 install(TARGETS
   detect_net_ros
   detect_net
