--- a/image_recognition_tensorflow/CMakeLists.txt
+++ b/image_recognition_tensorflow/CMakeLists.txt
@@ -7,6 +7,13 @@ catkin_python_setup()
 
 catkin_package()
 
+# Test catkin lint
+find_program(CATKIN_LINT catkin_lint REQUIRED)
+execute_process(COMMAND "${CATKIN_LINT}" "-q" "-W2" "${CMAKE_SOURCE_DIR}" RESULT_VARIABLE lint_result)
+if(NOT ${lint_result} EQUAL 0)
+  message(FATAL_ERROR "catkin_lint failed")
+endif()
+
 install(PROGRAMS
   scripts/evaluate_classifier
   scripts/get_object_recognition
