--- a/image_recognition/package.xml
+++ b/image_recognition/package.xml
@@ -9,6 +9,8 @@
   <license>MIT</license>
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>python-catkin-lint</build_depend>
+
   <exec_depend>image_recognition_analysis</exec_depend>
   <exec_depend>image_recognition_keras</exec_depend>
   <exec_depend>image_recognition_msgs</exec_depend>
