--- a/image_recognition_keras/package.xml
+++ b/image_recognition_keras/package.xml
@@ -10,6 +10,8 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>python-catkin-lint</build_depend>
+
   <exec_depend>diagnostic_updater</exec_depend>
   <exec_depend>image_recognition_msgs</exec_depend>
   <exec_depend>image_recognition_util</exec_depend>
