--- a/image_recognition_msgs/package.xml
+++ b/image_recognition_msgs/package.xml
@@ -10,6 +10,8 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>python-catkin-lint</build_depend>
+
   <build_depend>message_generation</build_depend>
   <depend>sensor_msgs</depend>
   <exec_depend>message_runtime</exec_depend>
