--- a/image_recognition_openface/CMakeLists.txt
+++ b/image_recognition_openface/CMakeLists.txt
@@ -13,3 +13,10 @@ install(PROGRAMS
   scripts/train_from_images
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
+
+# Test catkin lint
+find_program(CATKIN_LINT catkin_lint REQUIRED)
+execute_process(COMMAND "${CATKIN_LINT}" "-q" "-W2" "${CMAKE_SOURCE_DIR}" RESULT_VARIABLE lint_result)
+if(NOT ${lint_result} EQUAL 0)
+  message(FATAL_ERROR "catkin_lint failed")
+endif()
