--- a/image_recognition_tensorflow_rqt/package.xml
+++ b/image_recognition_tensorflow_rqt/package.xml
@@ -10,6 +10,8 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>python-catkin-lint</build_depend>
+
   <exec_depend>image_recognition_tensorflow</exec_depend>
   <exec_depend>rqt_gui</exec_depend>
   <exec_depend>rqt_gui_py</exec_depend>
