--- a/image_recognition/package.xml
+++ b/image_recognition/package.xml
@@ -2,14 +2,12 @@
 <package format="2">
   <name>image_recognition</name>
   <version>0.0.4</version>
-  <description>The image_recognition package</description>
+  <description>The image_recognition packages for extracting recognitions from images.</description>
 
   <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>
 
   <license>MIT</license>
   <buildtool_depend>catkin</buildtool_depend>
-
-  <build_depend>python-catkin-lint</build_depend>
 
   <exec_depend>image_recognition_analysis</exec_depend>
   <exec_depend>image_recognition_keras</exec_depend>
