--- a/image_recognition_rqt/CMakeLists.txt
+++ b/image_recognition_rqt/CMakeLists.txt
@@ -10,11 +10,13 @@ catkin_python_setup()
 
 catkin_package()
 
-# Test catkin lint
-find_program(CATKIN_LINT catkin_lint REQUIRED)
-execute_process(COMMAND "${CATKIN_LINT}" "-q" "-W2" "${CMAKE_SOURCE_DIR}" RESULT_VARIABLE lint_result)
-if(NOT ${lint_result} EQUAL 0)
-  message(FATAL_ERROR "catkin_lint failed")
+if (CATKIN_ENABLE_TESTING)
+    # Test catkin lint
+    find_program(CATKIN_LINT catkin_lint REQUIRED)
+    execute_process(COMMAND "${CATKIN_LINT}" "-q" "-W2" "${CMAKE_SOURCE_DIR}" RESULT_VARIABLE lint_result)
+    if(NOT ${lint_result} EQUAL 0)
+      message(FATAL_ERROR "catkin_lint failed")
+    endif()
 endif()
 
 install(FILES plugin.xml
