--- a/image_recognition_jetson/package.xml
+++ b/image_recognition_jetson/package.xml
@@ -10,12 +10,12 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>python-catkin-lint</build_depend>
-
   <depend>cv_bridge</depend>
   <depend>image_recognition_msgs</depend>
   <depend>image_recognition_util</depend>
   <depend>image_transport</depend>
   <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
+
+  <test_depend>python-catkin-lint</test_depend>
 </package>
