--- a/image_recognition_keras/package.xml
+++ b/image_recognition_keras/package.xml
@@ -10,8 +10,6 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>python-catkin-lint</build_depend>
-
   <exec_depend>diagnostic_updater</exec_depend>
   <exec_depend>image_recognition_msgs</exec_depend>
   <exec_depend>image_recognition_util</exec_depend>
@@ -20,4 +18,6 @@
   <exec_depend>python-opencv</exec_depend>
   <exec_depend>python-tensorflow-pip</exec_depend>
   <exec_depend>rospy</exec_depend>
+
+  <test_depend>python-catkin-lint</test_depend>
 </package>
