--- a/image_recognition_openface/package.xml
+++ b/image_recognition_openface/package.xml
@@ -10,12 +10,12 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>python-catkin-lint</build_depend>
-
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>image_recognition_msgs</exec_depend>
   <exec_depend>image_recognition_util</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>python-numpy</exec_depend>
   <exec_depend>diagnostic_updater</exec_depend>
+
+  <test_depend>python-catkin-lint</test_depend>
 </package>
