--- a/image_recognition_rqt/package.xml
+++ b/image_recognition_rqt/package.xml
@@ -10,13 +10,13 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>python-catkin-lint</build_depend>
-
   <exec_depend>image_recognition_msgs</exec_depend>
   <exec_depend>image_recognition_util</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>rqt_gui</exec_depend>
   <exec_depend>rqt_gui_py</exec_depend>
+
+  <test_depend>python-catkin-lint</test_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
