--- a/image_recognition_color_extractor/CMakeLists.txt
+++ b/image_recognition_color_extractor/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(image_recognition_color_extractor)
 
-find_package(catkin REQUIRED COMPONENTS)
+find_package(catkin REQUIRED COMPONENTS cv_bridge image_recognition_msgs rospy)
 
 catkin_python_setup()
 
