--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ language: generic
 jobs:
   include:
   - name: "kinetic"
-    env: ROS_DISTRO=kinetic BEFORE_SCRIPT="pip install --upgrade pip && hash -r pip && pip install --upgrade enum34 pyasn1-modules tensorflow==2.1"
+    env: ROS_DISTRO=kinetic BEFORE_INIT="pip install --upgrade pip && hash -r pip && pip install --upgrade enum34 pyasn1-modules tensorflow==2.1"
   - name: "melodic"
-    env: ROS_DISTRO=melodic BEFORE_SCRIPT="pip install --upgrade pip && hash -r pip && pip install --upgrade enum34 pyasn1-modules tensorflow==2.1"
+    env: ROS_DISTRO=melodic BEFORE_INIT="pip install --upgrade pip && hash -r pip && pip install --upgrade enum34 pyasn1-modules tensorflow==2.1"
 
 install:
   - git clone https://github.com/ros-industrial/industrial_ci.git .ci_config
