(skybiometry) fix missing dep on python-future

--- a/image_recognition_skybiometry/package.xml
+++ b/image_recognition_skybiometry/package.xml
@@ -14,6 +14,7 @@
   <exec_depend>diagnostic_updater</exec_depend>
   <exec_depend>image_recognition_msgs</exec_depend>
   <exec_depend>image_recognition_util</exec_depend>
+  <exec_depend>python-future</exec_depend>
   <exec_depend>rospy</exec_depend>
 
   <test_depend>python-catkin-lint</test_depend>
