--- a/image_recognition_analysis/package.xml
+++ b/image_recognition_analysis/package.xml
@@ -14,10 +14,15 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <exec_depend>image_recognition_util</exec_depend>
-  <exec_depend>python-matplotlib</exec_depend>
-  <exec_depend>python-numpy</exec_depend>
-  <exec_depend>python-scipy</exec_depend>
-  <exec_depend>python-sklearn</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-matplotlib</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-matplotlib</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-scipy</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-scipy</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-sklearn</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-sklearn</exec_depend>
 
-  <test_depend>python-catkin-lint</test_depend>
+  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
+  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
 </package>
