--- a/image_recognition_color_extractor/package.xml
+++ b/image_recognition_color_extractor/package.xml
@@ -11,11 +11,14 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>python-catkin-lint</build_depend>
-
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>image_recognition_msgs</exec_depend>
-  <exec_depend>python-numpy</exec_depend>
-  <exec_depend>python-sklearn</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-sklearn</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-sklearn</exec_depend>
   <exec_depend>rospy</exec_depend>
+
+  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
+  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
 </package>
