--- a/image_recognition_util/package.xml
+++ b/image_recognition_util/package.xml
@@ -10,10 +10,13 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <exec_depend>python-numpy</exec_depend>
-  <exec_depend>python-opencv</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-opencv</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-opencv</exec_depend>
   <exec_depend>rospy</exec_depend>
 
-  <test_depend>python-catkin-lint</test_depend>
+  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
+  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
   <test_depend>rostest</test_depend>
 </package>
