(actions) Include ros_distro in the name

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   industrial_ci:
-    name: Industrial CI - ${{ github.event_name }}
+    name: Industrial CI (${{ matrix.env.ROS_DISTRO }}) - ${{ github.event_name }}
     strategy:
       fail-fast: false
       matrix:
