--- a/image_recognition_keras/package.xml
+++ b/image_recognition_keras/package.xml
@@ -26,4 +26,6 @@
 
   <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
   <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
+  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-future</test_depend>
+  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-future</test_depend>
 </package>
