--- a/image_recognition_skybiometry/package.xml
+++ b/image_recognition_skybiometry/package.xml
@@ -19,6 +19,8 @@
   <exec_depend>image_recognition_util</exec_depend>
   <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-future</exec_depend>
   <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-future</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-opencv</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-opencv</exec_depend>
   <exec_depend>rospy</exec_depend>
 
   <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
