(tensorflow_rqt) add exec dep on python-tensorboard-pip

--- a/image_recognition_tensorflow_rqt/package.xml
+++ b/image_recognition_tensorflow_rqt/package.xml
@@ -17,6 +17,7 @@
   <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
 
   <exec_depend>image_recognition_tensorflow</exec_depend>
+  <exec_depend>python-tensorboard-pip</exec_depend>
   <exec_depend>rqt_gui</exec_depend>
   <exec_depend>rqt_gui_py</exec_depend>
 
