Correct catkin_lint run_test: catkin_lint_cmake

--- a/image_recognition_age_gender/package.xml
+++ b/image_recognition_age_gender/package.xml
@@ -24,7 +24,7 @@
   <exec_depend>python-pytorch-pip</exec_depend>
   <exec_depend>rospy</exec_depend>
 
-  <test_depend>python3-catkin-lint</test_depend>
+  <test_depend>catkin_lint_cmake</test_depend>
   <test_depend>python3-future</test_depend>
   <test_depend>python3-rospkg</test_depend>
 
