--- a/image_recognition_analysis/package.xml
+++ b/image_recognition_analysis/package.xml
@@ -24,7 +24,7 @@
   <exec_depend>python3-scipy</exec_depend>
   <exec_depend>python3-sklearn</exec_depend>
 
-  <test_depend>python3-catkin-lint</test_depend>
+  <test_depend>catkin_lint_cmake</test_depend>
 
   <doc_depend>python3-sphinx</doc_depend>
   <doc_depend>python-sphinx-autoapi-pip</doc_depend>
