--- a/image_recognition_openpose/package.xml
+++ b/image_recognition_openpose/package.xml
@@ -23,7 +23,7 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
 
-  <test_depend>python3-catkin-lint</test_depend>
+  <test_depend>catkin_lint_cmake</test_depend>
 
   <doc_depend>python3-sphinx</doc_depend>
   <doc_depend>python-sphinx-autoapi-pip</doc_depend>
