--- a/image_recognition_color_extractor/package.xml
+++ b/image_recognition_color_extractor/package.xml
@@ -27,8 +27,7 @@
   <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-sklearn</exec_depend>
   <exec_depend>rospy</exec_depend>
 
-  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
-  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
+  <test_depend>catkin_lint_cmake</test_depend>
 
   <doc_depend condition="$ROS_PYTHON_VERSION == 2">python-sphinx</doc_depend>
   <doc_depend condition="$ROS_PYTHON_VERSION == 3">python3-sphinx</doc_depend>
