--- a/image_recognition_jetson/package.xml
+++ b/image_recognition_jetson/package.xml
@@ -20,6 +20,5 @@
   <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
 
-  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
-  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
+  <test_depend>catkin_lint_cmake</test_depend>
 </package>
