--- a/image_recognition_msgs/package.xml
+++ b/image_recognition_msgs/package.xml
@@ -22,6 +22,5 @@
 
   <exec_depend>message_runtime</exec_depend>
 
-  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
-  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
+  <test_depend>catkin_lint_cmake</test_depend>
 </package>
