--- a/image_recognition_rqt/package.xml
+++ b/image_recognition_rqt/package.xml
@@ -24,8 +24,7 @@
   <exec_depend>rqt_gui</exec_depend>
   <exec_depend>rqt_gui_py</exec_depend>
 
-  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
-  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
+  <test_depend>catkin_lint_cmake</test_depend>
 
   <doc_depend condition="$ROS_PYTHON_VERSION == 2">python-sphinx</doc_depend>
   <doc_depend condition="$ROS_PYTHON_VERSION == 3">python3-sphinx</doc_depend>
