--- a/image_recognition_skybiometry/package.xml
+++ b/image_recognition_skybiometry/package.xml
@@ -28,11 +28,9 @@
   <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-requests</exec_depend>
   <exec_depend>rospy</exec_depend>
 
-  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
-  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
-  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</test_depend>
-  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</test_depend>
-  
+  <test_depend>catkin_lint_cmake</test_depend>
+  <test_depend>python3-rospkg</test_depend>
+
   <doc_depend condition="$ROS_PYTHON_VERSION == 2">python-sphinx</doc_depend>
   <doc_depend condition="$ROS_PYTHON_VERSION == 3">python3-sphinx</doc_depend>
   <doc_depend>python-sphinx-autoapi-pip</doc_depend>
