--- a/image_recognition_util/package.xml
+++ b/image_recognition_util/package.xml
@@ -22,9 +22,7 @@
   <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-opencv</exec_depend>
   <exec_depend>rospy</exec_depend>
 
-  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
-  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
-  <test_depend>rostest</test_depend>
+  <test_depend>catkin_lint_cmake</test_depend>
 
   <doc_depend condition="$ROS_PYTHON_VERSION == 2">python-sphinx</doc_depend>
   <doc_depend condition="$ROS_PYTHON_VERSION == 3">python3-sphinx</doc_depend>
