--- a/image_recognition_openface/CMakeLists.txt
+++ b/image_recognition_openface/CMakeLists.txt
@@ -16,5 +16,5 @@ install(PROGRAMS
 
 if(CATKIN_ENABLE_TESTING)
   find_package(catkin_lint_cmake REQUIRED)
-  catkin_add_catkin_lint_test("-W2")
+  catkin_add_catkin_lint_test()
 endif()
