--- a/image_recognition_msgs/CMakeLists.txt
+++ b/image_recognition_msgs/CMakeLists.txt
@@ -37,5 +37,5 @@ catkin_package(
 
 if(CATKIN_ENABLE_TESTING)
   find_package(catkin_lint_cmake REQUIRED)
-  catkin_add_catkin_lint_test("-W2")
+  catkin_add_catkin_lint_test()
 endif()
