(color) also install get_colors script
Fixes catkin_lint -W1

--- a/image_recognition_color_extractor/CMakeLists.txt
+++ b/image_recognition_color_extractor/CMakeLists.txt
@@ -9,6 +9,7 @@ catkin_package()
 
 install(PROGRAMS
   scripts/color_extractor_node
+  scripts/get_colors
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
