(face_recognition) new pkg, contents copied from openface

--- a/.gitmodules
+++ b/.gitmodules
@@ -38,3 +38,7 @@
 	path = image_recognition_pose_estimation/docs
 	url = https://github.com/tue-robotics/tue_documentation_python.git
 	branch = master
+[submodule "image_recognition_face_recognition/docs"]
+	path = image_recognition_face_recognition/docs
+	url = https://github.com/tue-robotics/tue_documentation_python.git
+	branch = master
