(pose_estimation) fix catkin_lint (#220)

--- a/image_recognition_pose_estimation/CMakeLists.txt
+++ b/image_recognition_pose_estimation/CMakeLists.txt
@@ -9,6 +9,7 @@ catkin_package()
 
 install(PROGRAMS
   scripts/detect_poses
+  scripts/pose_estimation_node
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
